# BT_KiemThu

./: README.md
KiemThuDongDieuKhien/: CMakeLists.txt  bmi.cpp  buildAndTest.sh  foo.cpp  grade.cpp  sum.cpp
KiemThuDongDuLieu/: CMakeLists.txt  baocao.md  bmi.cpp  buildAndTest.sh
